<!DOCTYPE resources [<!ENTITY bytes "Bytes">]>

<resources>
    <string name="app_name">endec</string>
    <string name="pbe_algorithm_header">Algorithm</string>
    <string name="kdf_parameters_header">KDF Parameters</string>
    <string name="kdf_algorithm_title">KDF Algorithm</string>
    <string name="password_title">Password</string>
    <string name="salt_title">Salt</string>
    <string name="memory_requirement_title">Memory Requirement(in KiB)</string>
    <string name="memory_requirement_summary">Set the memory used in hashing</string>
    <string name="iteration_count_title">Iteration Count</string>
    <string name="iteration_count_summary">Set the desired number of iterations</string>
    <string name="mode_title">Mode</string>
    <string name="aes_parameters_header">AES Parameters</string>
    <string name="iv_title">Initialization Vector</string>
    <string name="contact_developer_title">Contact Developer</string>
    <string name="contact_developer_summary">Send an e-mail to the developer</string>
    <string name="help_header">Help</string>
    <string name="hash_length_title">Hash Length</string>
    <string name="hash_length_summary">Set desired hash length in bytes</string>
    <string name="version_title">Version</string>
    <string name="parallelism_title">Parallelism</string>
    <string name="parallelism_summary">Number of threads used for hashing</string>

    <string-array name="pbe_algorithms_list">
        <item>Argon2</item>
        <item>PBKDF2</item>
        <item>PBKDF1</item>
    </string-array>

    <string-array name="pbe_algorithms_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="argon_mode">
        <item>Argon2_D</item>
        <item>Argon2_I</item>
        <item>Argon2_ID</item>
    </string-array>

    <string-array name="argon_mode_value">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="argon_version">
        <item>V10</item>
        <item>V13</item>
    </string-array>

    <string-array name="argon_version_value">
        <item>0</item>
        <item>1</item>
    </string-array>

    <!-- Important -->
    <integer name="default_memory_cost">65536</integer>
    <integer name="default_iteration">10</integer>
    <string name="default_password">password</string>
    <string name="default_salt">0123456789abcdef</string>
    <integer name="default_algorithm">0</integer>
    <string name="default_argon_mode">2</string>
    <integer name="maximum_memory_cost">131072</integer>
    <integer name="maximum_iteration">100</integer>
    <string name="default_iv">0123456789abcdef</string>
    <string name="default_hash_length">32</string>
    <string name="default_argon_version">1</string>
    <integer name="max_hash_length">1024</integer>
    <integer name="min_hash_length">32</integer>
    <integer name="default_parallelism_value">4</integer>
    <integer name="min_parallelism_value">2</integer>
    <integer name="max_parallelism_value">8</integer>

    <!-- keys -->
    <string name="algorithm">algorithm</string>
    <string name="password">password</string>
    <string name="salt">salt</string>
    <string name="memory_cost">memory_cost</string>
    <string name="iteration">iteration</string>
    <string name="mode">mode</string>
    <string name="iv">iv</string>
    <string name="version">version</string>
    <string name="hash">hash</string>
    <string name="parallelism">parallelism</string>
    <string name="encrypted_files">Encrypted Files</string>

    <!--boolean -->
    <bool name="True">true</bool>
    <bool name="False">false</bool>

    <!-- categories home fragment -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="music">Music</string>
    <string name="video">Video</string>
    <string name="images">Images</string>
    <string name="documents">Documents</string>
    <string name="applications">Applications</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="no_recent_files">No Recent Files</string>

</resources>